<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    
    
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:text="@string/button_count_label"
        android:textSize="30sp" />    
    
    <EditText
        android:id="@+id/button_count"
        android:inputType="number" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/button_count_default"
        android:cursorVisible="false"
        android:textSize="30sp" />
    
    <Button
        android:id="@+id/clear_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:layout_marginBottom="80dp" />
    
    <Button
        android:id="@+id/toggle_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_button" />

</LinearLayout>
